ansible/okd/roles/rook-setup/files/ceph-object-route.yaml
#################################################################################################################
# Create an object store with settings specific for OpenShift. A minimum of 3 OSDs are required in this example
# for the replication since the failureDomain is host.
#  oc create -f object-openshift.yaml
#################################################################################################################

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rook-ceph-rgw-my-store # We recommend name to be the same as the service name below, but it is not required
  namespace: rook-ceph # namespace:cluster
spec:
  to:
    kind: Service
    name: rook-ceph-rgw-my-store # The name of the RGW service is in the form 'rook-ceph-rgw-<objectstore-name>'
