ansible/okd/roles/rook-setup/files/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rook-ceph
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  host: rook-dashboard.apps.okd.example.com
  to:
    kind: Service
    name: rook-ceph-mgr-dashboard
    weight: 100
  port:
    targetPort: http-dashboard
  tls:
    termination: edge
  wildcardPolicy: None
